--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ TODO :
 
 - Check server JSON return and repost data if error after a var smartTimeout
 - Add an event with current part correctly posted (for progress bar etc...)
+  => function progress(index, total) where index = current index and total = total index
 
 - create a smartupload.js file with a SmartUpload Object DONE
 - ADD a var SMARTSIZE, with default 1048576 = 1Mo, size for use Smart chunk DONE
